--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,7 @@
               android:paddingRight="20dp"
               android:id="@+id/LinearID"
 
-              android:background="#000000">
+              android:background="#0f18b3">
     <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
